[gd_scene load_steps=14 format=3 uid="uid://6i4e1iq6g2th"]

[ext_resource type="Script" path="res://maple_street/Scripts/TitleScreen.gd" id="1_l3tev"]
[ext_resource type="Texture2D" uid="uid://c3h2n8ym6whga" path="res://maple_street/Assets/TitleScreen/Title_Screen.png" id="2_gxhoo"]
[ext_resource type="Texture2D" uid="uid://efhdelhrqdxa" path="res://maple_street/Assets/TitleScreen/Start_Screen_-_Start_Button (1).png" id="3_2k31f"]
[ext_resource type="FontFile" uid="uid://bbsbxslie4s0h" path="res://global/fonts/ComicNeue-Regular.ttf" id="4_mt54a"]
[ext_resource type="Texture2D" uid="uid://b6f37jxmn6i83" path="res://maple_street/Assets/TitleScreen/Start_Screen_-_Settings_.png" id="5_xsfw0"]
[ext_resource type="AudioStream" uid="uid://cvnd7y86efl6f" path="res://maple_street/Assets/sounds/A_Halloween_on_Maple_Street_-_Open_World.mp3" id="6_jrqqy"]
[ext_resource type="Texture2D" uid="uid://dl3abgqn4ro1s" path="res://maple_street/Assets/TitleScreen/Start_Screen_-_Credits.png" id="7_or8nf"]
[ext_resource type="Texture2D" uid="uid://x4024vmln4kc" path="res://maple_street/Assets/TitleScreen/Title_Card_B_3.png" id="7_rnnjn"]

[sub_resource type="FontFile" id="FontFile_jqq4x"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/64/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="Theme_4cdov"]
default_font = SubResource("FontFile_jqq4x")
default_font_size = 64
Button/colors/font_color = Color(0.827451, 0.45098, 0, 1)
Button/colors/font_hover_color = Color(0.980392, 0.945098, 0.894118, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s116d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mtwop"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_efimj"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3tev")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1681.0
offset_bottom = 1079.0

[node name="StartScreen" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(962.5, 544)
scale = Vector2(2.62432, 2.2833)
texture = ExtResource("2_gxhoo")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 873.0
offset_right = 602.0
offset_bottom = 998.0
theme = SubResource("Theme_4cdov")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s116d")
text = "Start"

[node name="StartGame" type="Sprite2D" parent="StartButton"]
position = Vector2(231, 62.5)
scale = Vector2(0.54, 0.569)
texture = ExtResource("3_2k31f")

[node name="Credits" type="Button" parent="."]
layout_mode = 0
offset_left = 732.0
offset_top = 873.0
offset_right = 1201.0
offset_bottom = 998.0
theme = SubResource("Theme_4cdov")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mtwop")
text = "Credits"

[node name="Credit" type="Sprite2D" parent="Credits"]
position = Vector2(234.5, 61.5)
scale = Vector2(0.57, 0.546)
texture = ExtResource("7_or8nf")

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 1277.0
offset_top = 861.0
offset_right = 2307.0
offset_bottom = 1129.0
scale = Vector2(0.55, 0.55)
theme = SubResource("Theme_4cdov")
theme_override_colors/font_color = Color(0.380392, 0.172549, 0.129412, 1)
theme_override_fonts/font = ExtResource("4_mt54a")
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_efimj")
text = "Quit"
icon = ExtResource("5_xsfw0")
flat = true
icon_alignment = 1

[node name="OpenWorld" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jrqqy")
autoplay = true

[node name="TitleCardB3" type="Sprite2D" parent="."]
position = Vector2(971, 191)
scale = Vector2(2.06506, 2.02769)
texture = ExtResource("7_rnnjn")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_settings_pressed"]
